--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Ressources en ligne à propos des TCA
+description: Ressources en ligne à propos des TCA (Troubles du comportement alimentaire)
