--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Ressources en ligne à propos des TCA
-description: Ressources en ligne à propos des TCA (Troubles du comportement alimentaire)
+title: Troubles du comportement alimentaire (TCA)
+description: Ressources en ligne
