--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Troubles du comportement alimentaire (TCA)
 description: Ressources en ligne
+google_analytics: G-P50KWX4J1H
